# rust_sokoban

./: Cargo.toml  README.md
.run/: Run release.run.xml
src/: configuration.rs  entity.rs  error.rs  event.rs  infrastructure.rs  lib.rs  main.rs  resource.rs  sokoban_game.rs
src/component/: box_colour.rs  mod.rs  position.rs  renderable.rs
src/system/: event_system.rs  input_system.rs  mod.rs  rendering_system.rs  sokoban_game_state_system.rs
